<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.skyblock</groupId>
    <artifactId>skyblock-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>SkyBlock Parent</name>
    <description>Hypixel-SkyBlock-style remake — Maven multi-module aggregator</description>

    <modules>
        <module>api</module>
        <module>core</module>
        <module>enchantments</module>
        <module>islands</module>
        <module>items</module>
        <module>playerdata</module>
        <module>collections</module>
        <module>combat</module>
        <module>quests</module>
        <module>profiles</module>
        <module>minions</module>
        <module>economy</module>
        <module>banking</module>
        <module>slayer</module>
        <module>forging</module>
        <module>crafting</module>
        <module>npc</module>
        <module>npcs</module>
        <module>enchanting</module>
        <module>enchants</module>
        <module>mining</module>
        <module>island</module>
        <module>scoreboard</module>
        <module>stats</module>
        <module>events</module>
        <module>slayers</module>
        <module>dungeons</module>
        <module>fishing</module>
        <module>bazaar</module>
        <module>foraging</module>
        <module>auction</module>
        <module>auctionhouse</module>
        <module>auctions</module>
        <module>accessories</module>
        <module>guilds</module>
        <module>fairysouls</module>
        <module>backpacks</module>
        <module>bank</module>
        <module>talismans</module>
        <module>profile</module>
        <module>hotm</module>
        <module>brewing</module>
        <module>reforging</module>
        <module>leaderboards</module>
        <module>dungeon</module>
        <module>party</module>
        <module>museum</module>
        <module>minion</module>
        <module>calendar</module>
        <module>housing</module>
        <module>shop</module>
        <module>trades</module>
        <module>achievements</module>
        <module>alchemy</module>
        <module>collection</module>
        <module>skills</module>
        <module>bestiary</module>
        <module>wardrobe</module>
        <module>item_forge</module>
        <module>pets</module>
        <module>farming</module>
        <module>guild</module>
        <module>auction_house</module>
        <module>garden</module>
        <module>trading</module>
        <module>plugin</module>
        <module>skyblock-core</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <paper.api.version>26.1.2-R0.1-SNAPSHOT</paper.api.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.skyblock</groupId>
                <artifactId>skyblock-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>${paper.api.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
